tests/src/tests/fail/no-async-fn.stderr
error: `async_generic` can only be used on `fn`, `trait` or `impl`
 --> src/tests/fail/no-async-fn.rs:3:1
  |
3 | #[async_generic]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_generic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: an `async_generic` function should not be declared `async`
 --> src/tests/fail/no-async-fn.rs:4:1
  |
4 | async fn do_some_stuff() -> bool {
  | ^^^^^

error: expected `trait` or `impl`
 --> src/tests/fail/no-async-fn.rs:4:1
  |
4 | async fn do_some_stuff() -> bool {
  | ^^^^^
